--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.14",
+    "dotenv": "^17.2.3",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "firebase-admin": "^13.6.0",
     "globals": "^16.0.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.4.1",
