--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.4.1",
     "emailjs-com": "^3.2.0",
     "firebase": "^11.8.1",
+    "framer-motion": "^12.28.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-google-recaptcha": "^3.1.0",
